Style fixes to improve whitespacing in message viewer

--- a/safe_qgis/resources/css/InaSAFE.css
+++ b/safe_qgis/resources/css/InaSAFE.css
@@ -37,6 +37,7 @@ th.button-cell{
   background-repeat: repeat-x;
   border-color: #bd362f #bd362f #802420;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  padding-left: 4px;
 }
 .problem {
   color: #fff;
@@ -48,6 +49,7 @@ th.button-cell{
   background-repeat: repeat-x;
   border-color: #f89406 #f89406 #ad6704;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  padding-left: 4px;
 }
 .info {
   color: #fff;
@@ -59,6 +61,7 @@ th.button-cell{
   background-repeat: repeat-x;
   border-color: #0055cc #0055cc #003580;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  padding-left: 4px;
 }
 
 .inverse {
@@ -71,6 +74,7 @@ th.button-cell{
   background-repeat: repeat-x;
   border-color: rgba(0, 14, 40, 0.66) #2f2f2f #000000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  padding-left: 4px;
 }
 
 .wide {
